# PROG2002-Exam

./: .gitignore  CMakeLists.txt  README.md
exam/: CMakeLists.txt  Floor.cpp  Floor.h  GameState.cpp  GameState.h  Object.cpp  Object.h  ObjectRenderer.cpp  ObjectRenderer.h  Player.cpp  Player.h  constants.h  main.cpp  models.h
exam/data_structures/: SparseGrid.h
exam/game/: Board.cpp  Board.h  GameState.cpp  GameState.h
exam/rendering/: BoardRenderer.cpp  BoardRenderer.h  FloorRenderer.cpp  FloorRenderer.h  Light.h  ObjectRenderer.cpp  ObjectRenderer.h  phong_shader.h
framework/: CMakeLists.txt
framework/include/framework/: Camera.h  IndexBuffer.h  Shader.h  Texture.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h  geometry.h  window.h
framework/src/: Camera.cpp  IndexBuffer.cpp  Shader.cpp  Texture.cpp  geometry.cpp  window.cpp
